overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-html, body {overflow-x: hidden;
-
-}
+html, body {overflow-x: hidden !important;}
 #nav-hero{
   position: relative;
   background-image: url('../public/hero_1.jpg');
